--- a/data/hosts/ivan.yml
+++ b/data/hosts/ivan.yml
@@ -1,5 +1,6 @@
 Name: ivan
 "FullName": "Ivan Pedrazas"
-"Bio": "Ivan has a background in development and architecture. He is not a sysadmin, even he wears the DevOps hat very proudly. He's been working with kubernetes in production for almost a year."
+"Bio": "Ivan has a background in development and architecture. He has been helping companies to adopt
+DevOps and release better software and more often. He enjoys designing and building distributed systems. He's been working with kubernetes in production for more than a year."
 "Twitter": "ipedrazas"
 "GitHub": "ipedrazas"
