--- a/data/guests/odwyer.yml
+++ b/data/guests/odwyer.yml
@@ -1,4 +1,4 @@
 Name: odwyer
-"FullName": "David O'Dwyer'"
-"Bio": "David O'Dwyer is the director of <a href="http://www.livewyer.com">Livewyer</a>."
+"FullName": "David ODwyer"
+"Bio": "David ODwyer is the director of <a href=\"http://www.livewyer.com\">Livewyer</a>."
 "Twitter": "davidodwyer"
