--- a/data/guests/odwyer.yml
+++ b/data/guests/odwyer.yml
@@ -1,4 +1,4 @@
 Name: odwyer
 "FullName": "David ODwyer"
-"Bio": "David ODwyer is the director of <a href=\"http://www.livewyer.com\">Livewyer</a>."
+"Bio": "David is the MD @LiveWyerUK. Works with high-availability web services, open source systems architecture & Kubernetes. Makes a decent cup of tea as well."
 "Twitter": "davidodwyer"
